--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,14 @@
     <string name="app_name">check</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_new_reminder">NewReminder</string>
+    <string name="name_hint">name</string>
+    <string name="interval_hint">interval</string>
+    <string name="max_count_hint">times per day</string>
+    <string name="action_new_reminder">new</string>
+    <string name="title_activity_tabbed">TabbedActivity</string>
+    <string name="title_section1">Todo</string>
+    <string name="title_section2">All</string>
+    <string name="title_section3">History</string>
 
 </resources>
